Initial frontend commit

--- a/index.html
+++ b/index.html
@@ -11,62 +11,87 @@
 
 <body>
     <div id="app">
+        <!-- Main Page -->
         <section id="main" class="page active">
-            <h1>🖱 Clicker</h1>
+            <h1>Clicker</h1>
             <p>Coins: <span id="coins">0</span></p>
             <p>Coins/sec: <span id="coinsPerSec">0</span></p>
-            <button id="clickBtn">Click!</button>
+            <p>Coins/click: <span id="coinsPerClick">1</span></p>
+            <div class="clicker-container">
+                <div id="clickImage" class="click-image default"></div>
+            </div>
         </section>
 
+        <!-- Top Players Page -->
         <section id="top" class="page">
-            <h1>🏆 Top Players</h1>
+            <h1>Top Players</h1>
             <ul id="topList"></ul>
         </section>
 
+        <!-- Upgrades Page -->
         <section id="upgrade" class="page">
-            <h1>⚙️ Upgrade</h1>
+            <h1>Upgrades</h1>
             <div class="upgrade-section">
-                <h2>Upgrade Coins Per Click</h2>
-                <p>Level: <span id="upgradeClickLevel">0</span></p>
-                <p>Cost: <span id="upgradeClickCost">10</span> coins</p>
-                <button id="upgradeClickBtn">Upgrade</button>
+                <h3>Click Power</h3>
+                <div class="upgrade-info">
+                    <div class="upgrade-level">Level: <span id="upgradeClickLevel">0</span></div>
+                    <div class="upgrade-cost">Cost: <span id="upgradeClickCost">10</span> 🪙</div>
+                </div>
+                <button id="upgradeClickBtn" class="upgrade-btn">Upgrade</button>
             </div>
+
             <div class="upgrade-section">
-                <h2>Upgrade Coins Per Second</h2>
-                <p>Level: <span id="upgradeAutoLevel">0</span></p>
-                <p>Cost: <span id="upgradeAutoCost">20</span> coins</p>
-                <button id="upgradeAutoBtn">Upgrade</button>
+                <h3>Auto Income</h3>
+                <div class="upgrade-info">
+                    <div class="upgrade-level">Level: <span id="upgradeAutoLevel">0</span></div>
+                    <div class="upgrade-cost">Cost: <span id="upgradeAutoCost">20</span> 🪙</div>
+                </div>
+                <button id="upgradeAutoBtn" class="upgrade-btn">Upgrade</button>
             </div>
         </section>
 
+        <!-- Transfer Page -->
         <section id="transfer" class="page">
-            <h1>💸 Transfer Coins</h1>
-            <input id="transferUsername" type="text" placeholder="@username" />
-            <input id="transferAmount" type="number" placeholder="Amount" min="1" />
-            <button id="transferBtn">Send</button>
-            <p id="transferMessage"></p>
+            <h1>Transfer</h1>
+            <div class="transfer-form">
+                <div class="input-group">
+                    <label for="transferUsername">Username</label>
+                    <input id="transferUsername" type="text" placeholder="@username" />
+                </div>
+                <div class="input-group">
+                    <label for="transferAmount">Amount</label>
+                    <input id="transferAmount" type="number" placeholder="Amount" min="1" />
+                </div>
+                <button id="transferBtn" class="transfer-btn">Send Coins</button>
+                <p id="transferMessage" class="transfer-message"></p>
+            </div>
         </section>
 
+        <!-- Bottom Navigation -->
         <nav class="bottom-nav">
-            <button id="nav-main" class="active" aria-label="Main">
-                🖱
+            <button id="nav-main" class="nav-btn active">
+                <span>🖱</span>
                 <span>Main</span>
             </button>
-            <button id="nav-top" aria-label="Top Players">
-                🏆
+            <button id="nav-top" class="nav-btn">
+                <span>🏆</span>
                 <span>Top</span>
             </button>
-            <button id="nav-upgrade" aria-label="Upgrade">
-                ⚙️
-                <span>Upgrade</span>
+            <button id="nav-upgrade" class="nav-btn">
+                <span>⚙️</span>
+                <span>Upgrades</span>
             </button>
-            <button id="nav-transfer" aria-label="Transfer">
-                💸
+            <button id="nav-transfer" class="nav-btn">
+                <span>💸</span>
                 <span>Transfer</span>
             </button>
         </nav>
+        
+        <!-- Add a container for notifications -->
+        <div id="notificationContainer"></div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="script.js"></script>
 </body>
 
